--- a/app/src/main/res/layout/item_shipment.xml
+++ b/app/src/main/res/layout/item_shipment.xml
@@ -28,6 +28,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:textSize="@dimen/_11ssp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -37,6 +38,7 @@
 
 
                 <TextView
+                    android:textSize="@dimen/_11ssp"
                     android:id="@+id/shippedBy"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -48,6 +50,7 @@
             </LinearLayout>
 
             <TextView
+                    android:textSize="@dimen/_11ssp"
                 android:id="@+id/txtStatus"
                 android:visibility="gone"
                 android:layout_width="wrap_content"
@@ -80,6 +83,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:textSize="@dimen/_11ssp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -89,6 +93,7 @@
 
 
                 <TextView
+                    android:textSize="@dimen/_11ssp"
                     android:id="@+id/carrierName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -112,6 +117,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                    android:textSize="@dimen/_11ssp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -121,6 +127,7 @@
 
 
                     <TextView
+                    android:textSize="@dimen/_11ssp"
                         android:id="@+id/txtDlNumber"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -150,6 +157,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:textSize="@dimen/_11ssp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -159,6 +167,7 @@
 
 
                 <TextView
+                    android:textSize="@dimen/_11ssp"
                     android:id="@+id/driverName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -183,6 +192,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                    android:textSize="@dimen/_11ssp"
                         android:id="@+id/shippedDate"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
