--- a/app/src/main/res/values/typography.xml
+++ b/app/src/main/res/values/typography.xml
@@ -84,6 +84,12 @@
         <item name="lineHeight">20sp</item>
     </style>
 
+    <style name="inter_500_16_20">
+        <item name="fontFamily">@font/inter_semi_bold</item>
+        <item name="fontWeight">500</item>
+        <item name="android:textSize">16sp</item>
+        <item name="lineHeight">20sp</item>
+    </style>
 
     <style name="inter_600_14_18">
         <item name="fontFamily">@font/inter_bold</item>
