-> Bol Screen UI Added.

--- a/app/src/main/res/layout/activity_bol.xml
+++ b/app/src/main/res/layout/activity_bol.xml
@@ -12,126 +12,42 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar_layout" />
 
-    <LinearLayout
-        android:id="@+id/createBol"
+    <RelativeLayout
+        android:layout_marginTop="@dimen/_6sdp"
+        android:layout_marginHorizontal="24dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/_24sdp"
-        android:layout_marginTop="@dimen/_24sdp"
-        android:background="@drawable/bg_filled_outlined"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <RelativeLayout
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcvBol"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/_16sdp"
-            android:layout_marginVertical="@dimen/_16ssp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            tools:ignore="UselessParent">
+            tools:itemCount="4"
+            tools:listitem="@layout/item_tag_history"
+            tools:visibility="visible" />
 
-            <ImageView
-                android:id="@+id/imgCreateBol"
-                android:layout_width="@dimen/_72sdp"
-                android:layout_height="@dimen/_72sdp"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="@dimen/_12sdp"
-                android:background="@drawable/bg_circle"
-                android:elevation="1dp"
-                android:importantForAccessibility="no"
-                android:scaleType="centerInside"
-                android:src="@drawable/ic_create_bol" />
+        <include
+            android:id="@+id/no_item"
+            layout="@layout/layout_no_item"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/imgCreateBol"
-                android:orientation="vertical">
+    </RelativeLayout>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:fontFamily="@font/inter_bold"
-                    android:letterSpacing="-0.01"
-                    android:text="@string/create_bol"
-                    android:textAppearance="@style/inter_700_14_12"
-                    android:textColor="@color/colorPrimary" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginTop="@dimen/_6sdp"
-                    android:text="@string/create_bill_of_lading_for_new_shipment"
-                    android:textAppearance="@style/inter_400_12_16"
-                    android:textColor="@color/color_909090" />
-
-            </LinearLayout>
-
-        </RelativeLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/lookupBol"
+    <RelativeLayout
+        android:layout_centerInParent="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/_24sdp"
-        android:layout_marginTop="@dimen/_24sdp"
-        android:background="@drawable/bg_filled_outlined"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/_16sdp"
-            android:layout_marginVertical="@dimen/_16ssp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            tools:ignore="UselessParent">
-
-            <ImageView
-                android:id="@+id/imgLookupBol"
-                android:layout_width="@dimen/_72sdp"
-                android:layout_height="@dimen/_72sdp"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="@dimen/_12sdp"
-                android:background="@drawable/bg_circle"
-                android:elevation="1dp"
-                android:importantForAccessibility="no"
-                android:scaleType="centerInside"
-                android:src="@drawable/ic_look_bol" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/imgLookupBol"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:fontFamily="@font/inter_bold"
-                    android:letterSpacing="-0.01"
-                    android:text="@string/lookup_bol"
-                    android:textAppearance="@style/inter_700_14_12"
-                    android:textColor="@color/colorPrimary" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginTop="@dimen/_6sdp"
-                    android:text="@string/inspect_items_at_any_stage_of_the_processes_mark_their_service_ability_condition_assign_next_actions_for_item"
-                    android:textAppearance="@style/inter_400_12_16"
-                    android:textColor="@color/color_909090" />
-
-            </LinearLayout>
-
-        </RelativeLayout>
-
-    </LinearLayout>
+        <ProgressBar
+            android:visibility="gone"
+            android:id="@+id/progressBar"
+            android:layout_width="@dimen/_50sdp"
+            android:layout_height="@dimen/_50sdp"
+            android:layout_centerInParent="true"
+            android:indeterminateTint="@color/app_color" />
+    </RelativeLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
