--- a/app/src/main/res/layout/fragment_inventory_items.xml
+++ b/app/src/main/res/layout/fragment_inventory_items.xml
@@ -16,186 +16,6 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/ll_inv_cycle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="1dp"
-                android:background="@color/rs_green"
-                android:gravity="center_vertical"
-                android:orientation="vertical"
-                android:paddingHorizontal="4dp"
-                android:paddingVertical="5dp"
-                android:visibility="gone">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <LinearLayout
-                        android:id="@+id/ll_title"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:id="@+id/tv_cycle"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:drawableLeft="@drawable/audit_white_24"
-                                android:drawablePadding="10dp"
-                                android:text=""
-                                android:textColor="@color/white"
-                                android:textSize="16dp" />
-
-                            <TextView
-                                android:id="@+id/tv_edit"
-                                android:layout_width="40dp"
-                                android:layout_height="32dp"
-                                android:layout_gravity="center"
-                                android:background="@color/rs_green"
-                                android:drawableStart="@drawable/edit_24"
-                                android:drawableTint="@color/white"
-                                android:elevation="0dp"
-                                android:paddingHorizontal="15dp" />
-                        </LinearLayout>
-
-                        <TextView
-                            android:id="@+id/bt_sch"
-                            android:layout_width="40dp"
-                            android:layout_height="32dp"
-                            android:layout_gravity="center"
-                            android:background="@color/rs_green"
-                            android:drawableStart="@drawable/search_24"
-                            android:drawableTint="@color/white"
-                            android:elevation="0dp"
-                            android:paddingStart="5dp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/ll_sch"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:visibility="gone">
-
-                        <EditText
-                            android:id="@+id/et_search"
-                            android:layout_width="0dp"
-                            android:layout_height="32dp"
-                            android:layout_gravity="center"
-                            android:layout_marginStart="20dp"
-                            android:layout_weight="1"
-                            android:autofillHints="44454"
-                            android:background="@drawable/search_left_style"
-                            android:drawableLeft="@drawable/search_24"
-                            android:hint="@string/search_tag"
-                            android:paddingStart="15dp"
-                            android:paddingEnd="10dp"
-                            android:singleLine="true"
-                            android:textSize="15sp" />
-
-                        <Button
-                            android:id="@+id/bt_search"
-                            android:layout_width="40dp"
-                            android:layout_height="32dp"
-                            android:layout_gravity="center"
-                            android:layout_marginEnd="20dp"
-                            android:background="@drawable/search_right_style"
-                            android:drawableStart="@drawable/search_24"
-                            android:paddingStart="5dp"
-                            android:visibility="gone" />
-
-                        <Button
-                            android:id="@+id/bt_can"
-                            android:layout_width="40dp"
-                            android:layout_height="32dp"
-                            android:layout_gravity="center"
-                            android:layout_marginEnd="20dp"
-                            android:background="@drawable/search_right_style"
-                            android:drawableStart="@drawable/close_24"
-                            android:paddingStart="5dp" />
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone">
-
-                    <TextView
-                        android:layout_width="120dp"
-                        android:layout_height="wrap_content"
-                        android:text="Scanned Items"
-                        android:textColor="@color/white"
-                        android:textSize="15dp" />
-
-                    <TextView
-                        android:layout_width="30dp"
-                        android:layout_height="wrap_content"
-                        android:text=" : "
-                        android:textColor="@color/white"
-                        android:textSize="15dp" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="0"
-                        android:textColor="@color/white"
-                        android:textSize="15dp" />
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="vertical"
-                android:visibility="gone">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="1dp"
-                    android:background="@color/rs_red_50"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <TextView
-
-                        android:layout_width="match_parent"
-                        android:layout_height="70dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="0"
-                        android:textColor="@color/rs_blue"
-                        android:textSize="50dp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/tv_text"
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="Scanned Item"
-                        android:textColor="@color/rs_blue"
-                        android:textSize="15dp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/lbase_color" />
-            </LinearLayout>
-
-            <LinearLayout
                 android:id="@+id/lnrItem"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -484,12 +304,12 @@
         </LinearLayout>
 
         <ProgressBar
-            android:visibility="gone"
             android:id="@+id/progressBar"
             android:layout_width="@dimen/_50sdp"
             android:layout_height="@dimen/_50sdp"
             android:layout_centerInParent="true"
-            android:indeterminateTint="@color/app_color" />
+            android:indeterminateTint="@color/app_color"
+            android:visibility="gone" />
 
     </RelativeLayout>
 
