--- a/app/src/main/res/layout/activity_create_bol.xml
+++ b/app/src/main/res/layout/activity_create_bol.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,151 +15,146 @@
     <RelativeLayout
         android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="@dimen/_20sdp">
 
-        <ScrollView
+        <LinearLayout
+            android:id="@+id/dataLyout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingHorizontal="@dimen/_24sdp"
-            android:scrollbars="none"
-            android:background="@color/white">
+            android:layout_marginTop="@dimen/_24sdp"
+            android:gravity="start"
+            android:orientation="vertical">
 
-            <RelativeLayout
+            <!-- Ship Date -->
+            <TextView
+                android:id="@+id/shipDateLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Order Number:"
+                android:textAppearance="@style/inter_400_12_14" />
+
+            <EditText
+                android:id="@+id/orderNumber"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/bg_edit_text"
+                android:hint="ORD-2025-1-192E90"
+                android:padding="@dimen/_10sdp"
+                android:textAppearance="@style/inter_400_10_10" />
 
-                <LinearLayout
-                    android:id="@+id/dataLyout"
-                    android:layout_marginTop="@dimen/_24sdp"
+            <!-- Carrier -->
+            <TextView
+                android:id="@+id/carrierLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Bol Number:"
+                android:textAppearance="@style/inter_400_12_14" />
+
+            <EditText
+                android:id="@+id/bolNumber"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/bg_edit_text"
+                android:hint="BOL-2025-1-51E73D"
+                android:padding="@dimen/_10sdp"
+                android:textAppearance="@style/inter_400_10_10" />
+
+            <!-- Driver Name -->
+            <TextView
+                android:id="@+id/driverNameLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Shipment Number:"
+                android:textAppearance="@style/inter_400_12_14" />
+
+            <EditText
+                android:id="@+id/shipmentNumber"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/bg_edit_text"
+                android:hint="SHP-2025-1-192E90"
+                android:padding="@dimen/_10sdp"
+                android:textAppearance="@style/inter_400_10_10" />
+
+            <!-- Driver License -->
+            <TextView
+                android:id="@+id/driverLicenseLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Customer:"
+                android:textAppearance="@style/inter_400_12_14" />
+
+            <AutoCompleteTextView
+                android:id="@+id/searchAutoCompleteCustomer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_edit_text"
+                android:hint="John Smith"
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="14dp"
+                android:singleLine="true"
+                android:textAppearance="@style/inter_400_12_16"
+                android:textColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <!-- License Plate -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Carrier:"
+                android:textAppearance="@style/inter_400_12_14" />
+
+            <AutoCompleteTextView
+                android:id="@+id/searchAutoCompleteCarrier"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_edit_text"
+                android:hint="John Smith"
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="14dp"
+                android:singleLine="true"
+                android:textAppearance="@style/inter_400_12_16"
+                android:textColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <!-- Dynamic Container -->
+                <ScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:gravity="start">
-
-                    <!-- Ship Date -->
-                    <TextView
-                        android:id="@+id/shipDateLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Order Number:"
-                        android:textAppearance="@style/inter_400_12_14"
-                        android:layout_marginTop="8dp" />
-
-                    <EditText
-                        android:id="@+id/shipDateInput"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="MM/DD/YYYY"
-                        android:padding="@dimen/_10sdp"
-                        android:textAppearance="@style/inter_400_10_10"
-                        android:background="@drawable/bg_edit_text"
-                        android:layout_marginBottom="16dp" />
-
-                    <!-- Carrier -->
-                    <TextView
-                        android:id="@+id/carrierLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Bol Number:"
-                        android:textAppearance="@style/inter_400_12_14"
-                        android:layout_marginTop="8dp" />
-
-                    <EditText
-                        android:id="@+id/carrierInput"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="3PL Logistics"
-                        android:padding="@dimen/_10sdp"
-                        android:textAppearance="@style/inter_400_10_10"
-                        android:background="@drawable/bg_edit_text"
-                        android:layout_marginBottom="16dp" />
-
-                    <!-- Driver Name -->
-                    <TextView
-                        android:id="@+id/driverNameLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Shipment Number:"
-                        android:textAppearance="@style/inter_400_12_14"
-                        android:layout_marginTop="8dp" />
-
-                    <EditText
-                        android:id="@+id/driverNameInput"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="TBD"
-                        android:padding="@dimen/_10sdp"
-                        android:textAppearance="@style/inter_400_10_10"
-                        android:background="@drawable/bg_edit_text"
-                        android:layout_marginBottom="16dp" />
-
-                    <!-- Driver License -->
-                    <TextView
-                        android:id="@+id/driverLicenseLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Customer:"
-                        android:textAppearance="@style/inter_400_12_14"
-                        android:layout_marginTop="8dp" />
-
-                    <EditText
-                        android:id="@+id/driverLicenseInput"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="TBD"
-                        android:padding="@dimen/_10sdp"
-                        android:textAppearance="@style/inter_400_10_10"
-                        android:background="@drawable/bg_edit_text"
-                        android:layout_marginBottom="24dp" />
-
-                    <!-- License Plate -->
-                    <TextView
-                        android:id="@+id/licensePlateLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Carrier:"
-                        android:textAppearance="@style/inter_400_12_14"
-                        android:layout_marginTop="8dp" />
-
-                    <EditText
-                        android:id="@+id/licensePlateInput"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="TBD"
-                        android:padding="@dimen/_10sdp"
-                        android:textAppearance="@style/inter_400_10_10"
-                        android:background="@drawable/bg_edit_text"
-                        android:layout_marginBottom="16dp" />
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:background="@color/white">
 
                     <LinearLayout
+                        android:id="@+id/itemContainer"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <!-- Dynamic Container -->
-                        <ScrollView
-                            android:layout_width="match_parent"
-                            android:layout_height="0dp"
-                            android:layout_weight="1"
-                            android:background="@color/white">
-
-                            <LinearLayout
-                                android:id="@+id/itemContainer"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical" />
-                        </ScrollView>
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical" />
+                </ScrollView>
 
 
-                    </LinearLayout>
+            </LinearLayout>
 
 
-                </LinearLayout>
+        </LinearLayout>
 
-
-            </RelativeLayout>
-
-        </ScrollView>
 
     </RelativeLayout>
 
@@ -172,7 +168,6 @@
         android:layout_marginHorizontal="@dimen/_16sdp"
         android:layout_marginVertical="@dimen/_12sdp"
         android:background="@drawable/button_background"
-        android:enabled="false"
         android:padding="@dimen/_8sdp"
         android:text="Done"
         android:textAllCaps="false"
