--- a/app/src/main/res/layout/item_bol.xml
+++ b/app/src/main/res/layout/item_bol.xml
@@ -13,81 +13,251 @@
         android:layout_marginBottom="@dimen/_6sdp"
         android:padding="12dp">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal">
 
                 <TextView
-                    android:layout_centerVertical="true"
-                    android:id="@+id/txtName"
+                    android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_toStartOf="@+id/layoutStatus"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    style="@style/inter_500_14_18"
-                    android:letterSpacing="-0.02"
-                    android:textColor="@color/color_121212"
-                    tools:text="Electricity" />
+                    android:fontFamily="@font/inter_regular"
+                    android:text="BOL: "
+                    android:textColor="@color/secondary_text_color"
+                    android:textSize="@dimen/_11ssp" />
 
-                <LinearLayout
-                    android:id="@+id/layoutStatus"
-                    android:layout_width="wrap_content"
+
+                <TextView
+                    android:id="@+id/bolNumber"
+                    android:layout_width="match_parent"
+                    android:layout_marginStart="@dimen/_4sdp"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:orientation="horizontal">
+                    android:fontFamily="@font/inter_bold"
+                    android:textColor="@color/secondary_dark_text_color"
+                    android:textSize="@dimen/_11ssp"
+                    tools:text="BOL-2025-1-56D73D" />
 
-                    <TextView
-                        android:id="@+id/txtState"
-                        android:textSize="@dimen/_11ssp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:background="@drawable/bg_order_details"
-                        android:backgroundTint="@color/color_bg_status_initiated"
-                        android:gravity="end"
-                        android:paddingHorizontal="4dp"
-                        android:paddingVertical="4dp"
-                        android:textAppearance="@style/inter_400_10_10"
-                        android:textColor="@color/color_text_status_initiated"
-                        tools:text="pending" />
-
-                </LinearLayout>
-
-
-            </RelativeLayout>
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/textViewDescription"
-                android:layout_width="match_parent"
+                android:id="@+id/txtStatus"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:autoLink="all"
-                android:ellipsize="end"
-                android:lineSpacingExtra="4dp"
-                style="@style/inter_400_12_16"
-                android:letterSpacing="-0.02"
-                android:textColor="@color/color_121212"
-                tools:text="Lorem ipsum dolor sit amet, consectetur. This is a two line description use case, we will end." />
+                android:layout_gravity="center"
+                android:background="@drawable/bg_order_details"
+                android:backgroundTint="@color/color_bg_status_initiated"
+                android:fontFamily="@font/inter_regular"
+                android:gravity="end"
+                android:paddingHorizontal="4dp"
+                android:paddingVertical="4dp"
+                android:textAppearance="@style/inter_400_10_10"
+                android:textColor="@color/color_text_status_initiated"
+                android:textSize="@dimen/_11ssp"
+                android:visibility="gone"
+                tools:text="pending" />
 
-            <TextView
-                android:id="@+id/textViewTimeStamp"
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginTop="6dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/inter_regular"
+                    android:text="Carrier:"
+                    android:textColor="@color/secondary_text_color"
+                    android:textSize="@dimen/_11ssp" />
+
+
+                <TextView
+                    android:id="@+id/carrierName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_4sdp"
+                    android:fontFamily="@font/inter_bold"
+                    android:text="Cleantec Logistics"
+                    android:textColor="@color/secondary_dark_text_color"
+                    android:textSize="@dimen/_11ssp" />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="end"
-                android:layout_marginTop="6dp"
-                style="@style/inter_400_10_14"
-                android:letterSpacing="-0.02"
-                android:textColor="@color/color_121212"
-                tools:text="19 Sept 2022, 9:30 PM" />
+                android:orientation="horizontal">
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="horizontal" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginTop="6dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/inter_regular"
+                    android:text="Customer:"
+                    android:textColor="@color/secondary_text_color"
+                    android:textSize="@dimen/_11ssp" />
+
+
+                <TextView
+                    android:id="@+id/customerName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_4sdp"
+                    android:fontFamily="@font/inter_bold"
+                    android:textColor="@color/secondary_dark_text_color"
+                    android:textSize="@dimen/_11ssp"
+                    tools:text="Tony Blair-Texas Grains" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/createdDate"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_4sdp"
+                        android:fontFamily="@font/inter_bold"
+                        android:textColor="@color/secondary_dark_text_color"
+                        android:textSize="@dimen/_11ssp"
+                        tools:text="11/11/11" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginTop="6dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/inter_regular"
+                    android:text="Date:"
+                    android:textColor="@color/secondary_text_color" />
+
+
+                <TextView
+                    android:id="@+id/reqDate1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_4sdp"
+                    android:fontFamily="@font/inter_bold"
+                    android:textColor="@color/secondary_dark_text_color"
+                    tools:text="11/11/11" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="6dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/inter_regular"
+                    android:text="Qty:"
+                    android:textColor="@color/secondary_text_color" />
+
+
+                <TextView
+                    android:id="@+id/txtRequiredQuantity1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_4sdp"
+                    android:fontFamily="@font/inter_bold"
+                    android:textColor="@color/secondary_dark_text_color"
+                    tools:text="200" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
