-> Scan Count zero

--- a/app/src/main/res/layout/fragment_inventory_items.xml
+++ b/app/src/main/res/layout/fragment_inventory_items.xml
@@ -163,6 +163,7 @@
                         android:paddingHorizontal="@dimen/_12sdp"
                         android:textAppearance="@style/inter_400_12_16"
                         android:textColor="@color/black"
+                        android:text="0"
                         tools:text="50" />
                 </LinearLayout>
 
