--- a/app/src/main/res/layout/activity_create_bol.xml
+++ b/app/src/main/res/layout/activity_create_bol.xml
@@ -20,8 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingHorizontal="@dimen/_24sdp"
-            android:scrollbars="none"
-            android:background="@color/white">
+            android:scrollbars="none">
 
             <RelativeLayout
                 android:layout_width="match_parent"
